<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.signUpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/gray_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#F6F7F8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/gray_bg"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"
            android:fontFamily="@font/open_sans_hebrew_extra_bold"

            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="369:369"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gray_bg"
            app:layout_constraintBottom_toBottomOf="@+id/gray_bg"
            app:layout_constraintWidth_percent="0.34166"
            android:background="@drawable/profile"
            />



        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/plus_btn"
            android:background="@android:drawable/btn_plus"
            app:layout_constraintTop_toTopOf="@+id/profile_img"
            android:tint="#3D67FC"
            app:layout_constraintEnd_toEndOf="@+id/profile_img"
            app:layout_constraintBottom_toBottomOf="@+id/profile_img"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_details"
            app:layout_constraintStart_toStartOf="@+id/firstName"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintTop_toBottomOf="@+id/profile_img"
            android:text="@string/personal_details"
            android:textSize="20sp"
            android:layout_marginTop="20sp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_details"
            android:layout_marginTop="30dp"
            app:layout_constraintWidth_percent="0.7"
            android:gravity="top"
            android:maxLines="1"
            app:hintTextAppearance="@style/text_in_layout_hint_Style"
            android:theme="@style/TextLabel"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/firstName_txt"
                android:hint = "@string/firstName"
                android:textColor="@color/light_blue"
                android:maxLines="1"
                android:inputType = "textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/valid_FirstName"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorFirstName"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            app:layout_constraintEnd_toEndOf="@+id/firstName"
            android:visibility="invisible"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.7"
            android:maxLines="1"
            app:hintTextAppearance="@style/text_in_layout_hint_Style"
            android:theme="@style/TextLabel"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/lastName_txt"
                android:hint = "@string/lastName"
                android:maxLines="1"
                android:textColor="@color/light_blue"
                android:inputType = "textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/valid_last_name"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorLastName"
            app:layout_constraintTop_toBottomOf="@id/lastName"
            app:layout_constraintEnd_toEndOf="@+id/password"
            android:visibility="invisible"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.7"
            android:gravity="top"
            android:inputType="textEmailAddress"
            app:hintTextAppearance="@style/text_in_layout_hint_Style"
            android:theme="@style/TextLabel"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/email_txt"
                android:hint = "@string/email"
                android:maxLines="1"
                android:textColor="@color/light_blue"
                android:inputType = "textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/valid_email"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorEmailText"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="@+id/email"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/valid_email"
            app:layout_constraintStart_toStartOf="@+id/email"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_hebrew_bold"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_title"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.7"
            android:inputType="textPassword"
            app:hintTextAppearance="@style/text_in_layout_hint_Style"
            android:theme="@style/TextLabel"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/password_txt"
                android:hint = "@string/password"
                android:textColor="@color/light_blue"
                android:maxLines="1"
                android:inputType = "textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/see_password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            android:background="@drawable/see_password"
            android:backgroundTint="@android:color/black"
            app:layout_constraintDimensionRatio="60:45"
            app:layout_constraintWidth_percent="0.055"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintVertical_bias="0.7"
            android:onClick="ClickSeePassword"
            />

        <TextView
            android:id="@+id/valid_password"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorPasswordText"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            android:visibility="invisible"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/retype_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            app:hintTextAppearance="@style/text_in_layout_hint_Style"
            android:theme="@style/TextLabel"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/retype_password_txt"
                android:hint = "@string/retype_password"
                android:textColor="@color/light_blue"
                android:maxLines="1"
                android:inputType = "textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/see_password_retype"
            app:layout_constraintEnd_toEndOf="@+id/retype_password"
            app:layout_constraintStart_toStartOf="@+id/retype_password"
            app:layout_constraintTop_toTopOf="@+id/retype_password"
            app:layout_constraintBottom_toBottomOf="@+id/retype_password"
            android:background="@drawable/see_rate_button"
            android:backgroundTint="@android:color/black"
            app:layout_constraintDimensionRatio="60:45"
            app:layout_constraintWidth_percent="0.055"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintVertical_bias="0.7"
            android:onClick="ClickSeePasswordRetype"
            />


        <TextView
            android:id="@+id/valid_retype_password"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorPasswordRetype"
            app:layout_constraintTop_toBottomOf="@id/retype_password"
            app:layout_constraintEnd_toEndOf="@+id/retype_password"
            android:visibility="invisible"
            />




        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_signin"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/retype_password"
            app:layout_constraintTop_toBottomOf="@+id/retype_password"
            android:background="@drawable/blue_btn"
            app:layout_constraintDimensionRatio="300:150"
            app:layout_constraintWidth_percent="0.2777"
            android:onClick="save"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_txt"
            app:layout_constraintTop_toTopOf="@+id/btn_signin"
            app:layout_constraintBottom_toBottomOf="@+id/btn_signin"
            app:layout_constraintEnd_toEndOf="@+id/btn_signin"
            app:layout_constraintStart_toStartOf="@+id/btn_signin"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/have_account_line"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/do_have_account"
                android:text="@string/have_account"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signIp"
                android:text="@string/sign_in"
                android:textColor="@color/blue"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="signIp"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms_of_use"
            android:text="@string/terms_of_use"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/have_account_line"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="13sp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>